# jupyter-pgadmin-proxy

./: LICENSE.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: publish.yml
setup/: Dockerfile  config_system.py
src/jupyter-pgadmin-proxy/: __init__.py
src/jupyter_pgadmin_proxy/: __init__.py
